# voltage-current-prediction

./: .gitignore  pyproject.toml
backend/: config.py  datamodel.py  dependencies.py  lacheck.py  main.py  models.py  utils.py
backend/models/: user.py
backend/routers/: predict.py  state.py  user.py
notebook/: data-analysis.ipynb  data-processing.ipynb  lstm-baseline.ipynb  main.ipynb  multioutput-lstm.ipynb  predict_Ia.py  predict_Ua.py  univariate-lstm-baseline.ipynb
notebook/checkpoints/univariate-checkpoints/: epoch=20-val_loss=0.00-other_metric=0.00.ckpt
notebook/lightning_logs/voltage-prediction/version_0/: events.out.tfevents.1714055042.rao.local.38063.0  events.out.tfevents.1714055101.rao.local.38063.1  events.out.tfevents.1714055101.rao.local.38063.2
notebook/model/: lstm_12_step.onnx  lstm_12_step_Ia.onnx  lstm_12_step_Ua.onnx  multi_output_lstm.onnx
notebook/models/: lstm_12_step_Ia.onnx
