[tool.poetry]
name = "voltage-current-prediction"
version = "0.1.0"
description = ""
authors = ["Peng Rao <raopend@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.2.1"
missingno = "^0.5.2"
plotly = "^5.20.0"
numpy = "^1.26.4"
statsmodels = "^0.14.1"
pmdarima = "^2.0.4"
seaborn = "^0.13.2"
onnx = "^1.16.0"
torch = "^2.3.0"
lightning = "^2.2.3"
pip = "^24.0"
torchinfo = "^1.8.0"
tensorboard = "^2.16.2"
rich = "^13.7.1"
scikit-learn = "^1.4.2"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.1"
websockets = "^12.0"
cryptography = "^42.0.5"
nbdime = "^4.0.1"
sktime = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
